// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e > 'taroReact' snapshot > wxml 1`] = `"<view data-sid="_FA" id="_FA" style=""><view class="fs_xs font_semibold" data-sid="_Cf" id="_Cf" style="">v1234567890-e tijhrpknm___a qwertyuiop__w QWERTYUIOP__u asdfghjklfq ASDFGHJKLcx zxcvbnmbds ZXCVBNMlgo</view><button app-parameter="" business-id="" class="h5-button d_flex items_center justify_center p_1 fs_20px bg_redd200 text_white" data-sid="_Ch" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_Ch" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button">11</button><button app-parameter="" business-id="" class="h5-button d_flex items_center justify_center p_2 fs_24px border-width_1px border_redd200 text_pinkd500" data-sid="_Cj" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_Cj" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button">11</button><view class="bg_blued500" data-sid="_Cl" id="_Cl" style="">StyledView</view><view class="h5-div nut-cell" data-sid="_Ct" hover-class="none" hover-start-time="50" hover-stay-time="400" id="_Ct" style="border-radius: 6px; align-items: flex-start;"><view class="h5-div nut-cell__left" data-sid="_Cq" id="_Cq" style=""><view class="h5-div nut-cell__title" data-sid="_Cn" id="_Cn" style="">我是标题</view><view class="h5-div nut-cell__description" data-sid="_Cp" id="_Cp" style="">我是描述</view></view><view class="h5-div nut-cell__extra" data-sid="_Cs" id="_Cs" style="">描述文字</view></view><view data-sid="_Da" id="_Da" style=""><button app-parameter="" business-id="" class="h5-button nut-button nut-button--normal nut-button--round" data-sid="_Cx" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_Cx" lang="" open-type="share" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_Cw" id="_Cw" style=""><view class="h5-div" data-sid="_Cv" id="_Cv" style="">分享给好友</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--normal nut-button--round" data-sid="_DB" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DB" lang="" open-type="openSetting" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DA" id="_DA" style=""><view class="h5-div" data-sid="_Cz" id="_Cz" style="">打开授权设置页</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--primary nut-button--normal nut-button--round" data-sid="_DF" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DF" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DE" id="_DE" style=""><view class="h5-div" data-sid="_DD" id="_DD" style="">主要按钮</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--info nut-button--normal nut-button--round" data-sid="_DJ" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DJ" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DI" id="_DI" style=""><view class="h5-div" data-sid="_DH" id="_DH" style="">信息按钮</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--default nut-button--normal nut-button--round" data-sid="_DN" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DN" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DM" id="_DM" style=""><view class="h5-div" data-sid="_DL" id="_DL" style="">默认按钮</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--danger nut-button--normal nut-button--round" data-sid="_DR" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DR" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DQ" id="_DQ" style=""><view class="h5-div" data-sid="_DP" id="_DP" style="">危险按钮</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--warning nut-button--normal nut-button--round" data-sid="_DV" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DV" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DU" id="_DU" style=""><view class="h5-div" data-sid="_DT" id="_DT" style="">警告按钮</view></view></button><button app-parameter="" business-id="" class="h5-button nut-button nut-button--success nut-button--normal nut-button--round" data-sid="_DZ" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_DZ" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button"><view class="h5-div nut-button__warp" data-sid="_DY" id="_DY" style=""><view class="h5-div" data-sid="_DX" id="_DX" style="">成功按钮</view></view></button></view><view class="text_redd400 bg_amberd800" data-sid="_Dd" id="_Dd" style=""><text data-sid="_Dc" id="_Dc" space="" style="">Hello world!</text></view><text class="bg_gainsboro rounded_9999px fs_13px p_10px_15px" data-sid="_Df" id="_Df" space="" style="">Text</text><text class="bg_gainsboro rounded_9999px fs_13px p_10px_15px" data-sid="_Dh" id="_Dh" space="" style="">Text</text><text class="aaa" data-sid="_Dj" id="_Dj" space="" style="">aaa</text><button app-parameter="" business-id="" class="h5-button button" data-sid="_Dl" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_Dl" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button">Button</button><button app-parameter="" business-id="" class="h5-button button--variant-primary" data-sid="_Dn" aria-disabled="false" form-type="" hover-class="button-hover" hover-start-time="20" hover-stay-time="70" id="_Dn" lang="" open-type="" send-message-img="" send-message-path="" send-message-title="" session-from="" size="default" style="" type="" role="button">Button</button><view class="bg_redd400 h_10 _nchover_cbg_oranged400" data-sid="_Dp" id="_Dp" style="">112323</view><view class="bg_blued400 h_10 hovercbg_yellowd400" data-sid="_Dr" id="_Dr" style="">112323</view><view class="bg_redd400 mt_4 _n_text_ctext_grayd100" data-sid="_Du" id="_Du" style=""><text data-sid="_Dt" id="_Dt" space="" style="">pinkpink</text></view><view class="border-width_1px rounded_8px px_12px py_24px bg_cyand800" data-sid="_Dw" id="_Dw" style="">啊啊啊啊啊啊啊啊</view><view class="bg_redd500 hovercbg_redd700" data-sid="_Dy" id="_Dy" style="">大大说</view><view class="bg_redd500 hovercfocuscbg_redd700" data-sid="_EA" id="_EA" style="">大大说</view><view class="bg_redd500 hovercbg_redd700 activecbg_redd900" data-sid="_EC" id="_EC" style="">Hover me</view><text data-sid="_EP" id="_EP" space="" style=""><text class="firstctext_redd500" data-sid="_EE" id="_EE" space="" style="">1</text><text class="firstctext_redd500" data-sid="_EG" id="_EG" space="" style="">2</text><text class="firstctext_redd500" data-sid="_EI" id="_EI" space="" style="">3</text><text class="firstctext_redd500" data-sid="_EK" id="_EK" space="" style="">4</text><text class="firstctext_redd500" data-sid="_EM" id="_EM" space="" style="">5</text><text class="firstctext_redd500" data-sid="_EO" id="_EO" space="" style="">6</text><text class="firstctext_redd500" data-sid="_EE" id="_EE" space="" style="">1</text><text class="firstctext_redd500" data-sid="_EG" id="_EG" space="" style="">2</text><text class="firstctext_redd500" data-sid="_EI" id="_EI" space="" style="">3</text><text class="firstctext_redd500" data-sid="_EK" id="_EK" space="" style="">4</text><text class="firstctext_redd500" data-sid="_EM" id="_EM" space="" style="">5</text><text class="firstctext_redd500" data-sid="_EO" id="_EO" space="" style="">6</text></text><text data-sid="_Ec" id="_Ec" space="" style=""><text class="evencbg_blue oddcbg_red" data-sid="_ER" id="_ER" space="" style="">1</text><text class="evencbg_blue oddcbg_red" data-sid="_ET" id="_ET" space="" style="">2</text><text class="evencbg_blue oddcbg_red" data-sid="_EV" id="_EV" space="" style="">3</text><text class="evencbg_blue oddcbg_red" data-sid="_EX" id="_EX" space="" style="">4</text><text class="evencbg_blue oddcbg_red" data-sid="_EZ" id="_EZ" space="" style="">5</text><text class="evencbg_blue oddcbg_red" data-sid="_Eb" id="_Eb" space="" style="">6</text><text class="evencbg_blue oddcbg_red" data-sid="_ER" id="_ER" space="" style="">1</text><text class="evencbg_blue oddcbg_red" data-sid="_ET" id="_ET" space="" style="">2</text><text class="evencbg_blue oddcbg_red" data-sid="_EV" id="_EV" space="" style="">3</text><text class="evencbg_blue oddcbg_red" data-sid="_EX" id="_EX" space="" style="">4</text><text class="evencbg_blue oddcbg_red" data-sid="_EZ" id="_EZ" space="" style="">5</text><text class="evencbg_blue oddcbg_red" data-sid="_Eb" id="_Eb" space="" style="">6</text></text><view class="beforeccontent_xu1f44bx" data-sid="_Ee" id="_Ee" style="">Hello</view><input auto-fill="" class="h5-input placeholderctext_greend700" cursor="-1" data-sid="_Ef" id="_Ef" maxlength="140" name="" placeholder="Enter your name" placeholder-class="input-placeholder" placeholder-style="" safe-password-custom-hash="" selection-end="-1" selection-start="-1" style="" type="" value="">Enter your name</input><view class="motionReducectransition_none motionSafectransition_all_0d3s" data-sid="_Eh" id="_Eh" style="">Hello</view><view class="bg_black osDarkcbg_white" data-sid="_Ej" id="_Ej" style="">Hello</view><view class="bg_white highContrastcbg_black" data-sid="_El" id="_El" style="">Hello</view><view class="pb_4 portraitcpb_8" data-sid="_En" id="_En" style="">Hello</view><view class="group" data-sid="_Eq" id="_Eq" style=""><text class="groupHovercbg_redd500" data-sid="_Ep" id="_Ep" space="" style="">Hover me</text></view><view data-sid="_Ev" id="_Ev" style=""><text class="peer" data-sid="_Es" id="_Es" space="" style="">Hover me</text><text class="peerHovercbg_redd500" data-sid="_Eu" id="_Eu" space="" style="">I'll change by bg</text></view><view class="loadingcbg_grayd500" data-sid="_Ex" id="_Ex" style="">Hello</view><view class="px-4 py-1 text-center bg-slate-400" data-sid="_Ez" id="_Ez" style="">TAILWIND</view></view>"`;

exports[`e2e > 'taroReact' snapshot > wxss 1`] = `
"@keyframes spin {
  to {
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}
@keyframes ping {
  100%,
  75% {
    opacity: 0;
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}
@keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@keyframes bounce {
  0%,
  100% {
    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    -webkit-transform: translateY(-25%);
    transform: translateY(-25%);
  }
  50% {
    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    -webkit-transform: none;
    transform: none;
  }
} /* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
::after,
::before,
text,
view {
  border: 0 solid #e5e7eb;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
::after,
::before {
  --tw-content: '';
}
.h5-html {
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: normal;
  font-feature-settings: normal;
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-variation-settings: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
}
.h5-body {
  line-height: inherit;
  margin: 0;
}
.h5-hr {
  border-top-width: 1rpx;
  color: inherit;
  height: 0;
}
[title] {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}
.h5-h1,
.h5-h2,
.h5-h3,
.h5-h4,
.h5-h5,
.h5-h6 {
  font-size: inherit;
  font-weight: inherit;
}
.h5-a {
  color: inherit;
  text-decoration: inherit;
}
.h5-b,
.h5-strong {
  font-weight: bolder;
}
.h5-code,
.h5-kbd,
.h5-pre,
.h5-samp {
  font-family:
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    Liberation Mono,
    Courier New,
    monospace;
  font-size: 1em;
}
.h5-small {
  font-size: 80%;
}
.h5-sub,
.h5-sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
.h5-sub {
  bottom: -0.25em;
}
.h5-sup {
  top: -0.5em;
}
.h5-table {
  border-collapse: collapse;
  border-color: inherit;
  text-indent: 0;
}
.h5-button,
.h5-input,
.h5-select,
.h5-textarea,
optgroup {
  -webkit-font-feature-settings: inherit;
  font-feature-settings: inherit;
  color: inherit;
  font-family: inherit;
  font-size: 100%;
  font-variation-settings: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin: 0;
  padding: 0;
}
.h5-button,
.h5-select {
  text-transform: none;
}
.h5-button,
[type='button'],
[type='reset'],
[type='submit'] {
  -webkit-appearance: button;
  background-color: transparent;
  background-image: none;
}
:-moz-focusring {
  outline: auto;
}
:-moz-ui-invalid {
  box-shadow: none;
}
.h5-progress {
  vertical-align: baseline;
}
::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
  height: auto;
}
[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2rpx;
}
::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
.h5-summary {
  display: list-item;
}
.h5-blockquote,
.h5-dd,
.h5-dl,
.h5-fieldset,
.h5-figure,
.h5-h1,
.h5-h2,
.h5-h3,
.h5-h4,
.h5-h5,
.h5-h6,
.h5-hr,
.h5-p,
.h5-pre {
  margin: 0;
}
.h5-fieldset,
.h5-legend,
.h5-ol,
.h5-ul,
menu {
  padding: 0;
}
.h5-ol,
.h5-ul,
menu {
  list-style: none;
  margin: 0;
}
.h5-dialog {
  padding: 0;
}
.h5-textarea {
  resize: vertical;
}
.h5-input::-webkit-input-placeholder,
.h5-textarea::-webkit-input-placeholder {
  color: #9ca3af;
  opacity: 1;
}
.h5-input::-moz-placeholder,
.h5-textarea::-moz-placeholder {
  color: #9ca3af;
  opacity: 1;
}
.h5-input:-ms-input-placeholder,
.h5-textarea:-ms-input-placeholder {
  color: #9ca3af;
  opacity: 1;
}
.h5-input::-ms-input-placeholder,
.h5-textarea::-ms-input-placeholder {
  color: #9ca3af;
  opacity: 1;
}
.h5-input::placeholder,
.h5-textarea::placeholder {
  color: #9ca3af;
  opacity: 1;
}
.h5-audio,
.h5-canvas,
.h5-iframe,
.h5-img,
.h5-svg,
.h5-video,
embed,
object {
  display: block;
  vertical-align: middle;
}
.h5-img,
.h5-video {
  height: auto;
  max-width: 100%;
}
[hidden] {
  display: none;
}
.aaa {
  color: #cc3b3b;
  text-decoration: none;
}
::after,
::before,
text,
view {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
::-webkit-backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0rpx;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
.flex {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.rounded {
  border-radius: 8rpx;
}
.bg-slate-400 {
  --tw-bg-opacity: 1;
  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
}
.py-1 {
  padding-bottom: 8rpx;
  padding-top: 8rpx;
}
.text-center {
  text-align: center;
}
.outline {
  outline-style: solid;
}
.transition {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property:
    color,
    background-color,
    border-color,
    fill,
    stroke,
    opacity,
    -webkit-text-decoration-color,
    -webkit-box-shadow,
    -webkit-transform,
    -webkit-filter,
    -webkit-backdrop-filter;
  transition-property:
    color,
    background-color,
    border-color,
    fill,
    stroke,
    opacity,
    -webkit-text-decoration-color,
    -webkit-box-shadow,
    -webkit-transform,
    -webkit-filter,
    -webkit-backdrop-filter;
  transition-property: color, background-color, border-color,
    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
    backdrop-filter;
  transition-property:
    color,
    background-color,
    border-color,
    text-decoration-color,
    fill,
    stroke,
    opacity,
    box-shadow,
    transform,
    filter,
    backdrop-filter,
    -webkit-text-decoration-color,
    -webkit-box-shadow,
    -webkit-transform,
    -webkit-filter,
    -webkit-backdrop-filter;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
text,
view {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
.button {
  background-color: red;
}
.button--variant-primary {
  background-color: blue;
}
page {
  --color-primary: #000;
  --color-secondary: #fff;
  --color-tertiary: #ccc;
  --shadow-sm: 0 0 0 1rpx rgba(0, 0, 0, 0.05);
}
page {
  --borders-none: none;
  --easings-default: cubic-bezier(0.4, 0, 0.2, 1);
  --easings-linear: linear;
  --easings-in: cubic-bezier(0.4, 0, 1, 1);
  --easings-out: cubic-bezier(0, 0, 0.2, 1);
  --easings-in-out: cubic-bezier(0.4, 0, 0.2, 1);
  --durations-fastest: 50ms;
  --durations-faster: 100ms;
  --durations-fast: 150ms;
  --durations-normal: 200ms;
  --durations-slow: 300ms;
  --durations-slower: 400ms;
  --durations-slowest: 500ms;
  --radii-xs: 4rpx;
  --radii-sm: 8rpx;
  --radii-md: 12rpx;
  --radii-lg: 16rpx;
  --radii-xl: 24rpx;
  --radii-2xl: 32rpx;
  --radii-3xl: 48rpx;
  --radii-full: 9999rpx;
  --font-weights-thin: 100;
  --font-weights-extralight: 200;
  --font-weights-light: 300;
  --font-weights-normal: 400;
  --font-weights-medium: 500;
  --font-weights-semibold: 600;
  --font-weights-bold: 700;
  --font-weights-extrabold: 800;
  --font-weights-black: 900;
  --line-heights-none: 1;
  --line-heights-tight: 1.25;
  --line-heights-snug: 1.375;
  --line-heights-normal: 1.5;
  --line-heights-relaxed: 1.625;
  --line-heights-loose: 2;
  --fonts-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --fonts-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --fonts-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New', monospace;
  --letter-spacings-tighter: -0.05em;
  --letter-spacings-tight: -0.025em;
  --letter-spacings-normal: 0em;
  --letter-spacings-wide: 0.025em;
  --letter-spacings-wider: 0.05em;
  --letter-spacings-widest: 0.1em;
  --font-sizes-2xs: 16rpx;
  --font-sizes-xs: 24rpx;
  --font-sizes-sm: 28rpx;
  --font-sizes-md: 32rpx;
  --font-sizes-lg: 36rpx;
  --font-sizes-xl: 40rpx;
  --font-sizes-2xl: 48rpx;
  --font-sizes-3xl: 60rpx;
  --font-sizes-4xl: 72rpx;
  --font-sizes-5xl: 96rpx;
  --font-sizes-6xl: 120rpx;
  --font-sizes-7xl: 144rpx;
  --font-sizes-8xl: 192rpx;
  --font-sizes-9xl: 256rpx;
  --shadows-xs: 0 1rpx 2rpx 0 rgba(0, 0, 0, 0.05);
  --shadows-sm: 0 1rpx 3rpx 0 rgba(0, 0, 0, 0.1),
    0 1rpx 2rpx -1rpx rgba(0, 0, 0, 0.1);
  --shadows-md: 0 4rpx 6rpx -1rpx rgba(0, 0, 0, 0.1),
    0 2rpx 4rpx -2rpx rgba(0, 0, 0, 0.1);
  --shadows-lg: 0 10rpx 15rpx -3rpx rgba(0, 0, 0, 0.1),
    0 4rpx 6rpx -4rpx rgba(0, 0, 0, 0.1);
  --shadows-xl: 0 20rpx 25rpx -5rpx rgba(0, 0, 0, 0.1),
    0 8rpx 10rpx -6rpx rgba(0, 0, 0, 0.1);
  --shadows-2xl: 0 25rpx 50rpx -12rpx rgba(0, 0, 0, 0.25);
  --shadows-inner: inset 0 2rpx 4rpx 0 rgba(0, 0, 0, 0.05);
  --colors-current: currentColor;
  --colors-black: #000;
  --colors-white: #fff;
  --colors-transparent: transparent;
  --colors-rose-50: #fff1f2;
  --colors-rose-100: #ffe4e6;
  --colors-rose-200: #fecdd3;
  --colors-rose-300: #fda4af;
  --colors-rose-400: #fb7185;
  --colors-rose-500: #f43f5e;
  --colors-rose-600: #e11d48;
  --colors-rose-700: #be123c;
  --colors-rose-800: #9f1239;
  --colors-rose-900: #881337;
  --colors-rose-950: #4c0519;
  --colors-pink-50: #fdf2f8;
  --colors-pink-100: #fce7f3;
  --colors-pink-200: #fbcfe8;
  --colors-pink-300: #f9a8d4;
  --colors-pink-400: #f472b6;
  --colors-pink-500: #ec4899;
  --colors-pink-600: #db2777;
  --colors-pink-700: #be185d;
  --colors-pink-800: #9d174d;
  --colors-pink-900: #831843;
  --colors-pink-950: #500724;
  --colors-fuchsia-50: #fdf4ff;
  --colors-fuchsia-100: #fae8ff;
  --colors-fuchsia-200: #f5d0fe;
  --colors-fuchsia-300: #f0abfc;
  --colors-fuchsia-400: #e879f9;
  --colors-fuchsia-500: #d946ef;
  --colors-fuchsia-600: #c026d3;
  --colors-fuchsia-700: #a21caf;
  --colors-fuchsia-800: #86198f;
  --colors-fuchsia-900: #701a75;
  --colors-fuchsia-950: #4a044e;
  --colors-purple-50: #faf5ff;
  --colors-purple-100: #f3e8ff;
  --colors-purple-200: #e9d5ff;
  --colors-purple-300: #d8b4fe;
  --colors-purple-400: #c084fc;
  --colors-purple-500: #a855f7;
  --colors-purple-600: #9333ea;
  --colors-purple-700: #7e22ce;
  --colors-purple-800: #6b21a8;
  --colors-purple-900: #581c87;
  --colors-purple-950: #3b0764;
  --colors-violet-50: #f5f3ff;
  --colors-violet-100: #ede9fe;
  --colors-violet-200: #ddd6fe;
  --colors-violet-300: #c4b5fd;
  --colors-violet-400: #a78bfa;
  --colors-violet-500: #8b5cf6;
  --colors-violet-600: #7c3aed;
  --colors-violet-700: #6d28d9;
  --colors-violet-800: #5b21b6;
  --colors-violet-900: #4c1d95;
  --colors-violet-950: #2e1065;
  --colors-indigo-50: #eef2ff;
  --colors-indigo-100: #e0e7ff;
  --colors-indigo-200: #c7d2fe;
  --colors-indigo-300: #a5b4fc;
  --colors-indigo-400: #818cf8;
  --colors-indigo-500: #6366f1;
  --colors-indigo-600: #4f46e5;
  --colors-indigo-700: #4338ca;
  --colors-indigo-800: #3730a3;
  --colors-indigo-900: #312e81;
  --colors-indigo-950: #1e1b4b;
  --colors-blue-50: #eff6ff;
  --colors-blue-100: #dbeafe;
  --colors-blue-200: #bfdbfe;
  --colors-blue-300: #93c5fd;
  --colors-blue-400: #60a5fa;
  --colors-blue-500: #3b82f6;
  --colors-blue-600: #2563eb;
  --colors-blue-700: #1d4ed8;
  --colors-blue-800: #1e40af;
  --colors-blue-900: #1e3a8a;
  --colors-blue-950: #172554;
  --colors-sky-50: #f0f9ff;
  --colors-sky-100: #e0f2fe;
  --colors-sky-200: #bae6fd;
  --colors-sky-300: #7dd3fc;
  --colors-sky-400: #38bdf8;
  --colors-sky-500: #0ea5e9;
  --colors-sky-600: #0284c7;
  --colors-sky-700: #0369a1;
  --colors-sky-800: #075985;
  --colors-sky-900: #0c4a6e;
  --colors-sky-950: #082f49;
  --colors-cyan-50: #ecfeff;
  --colors-cyan-100: #cffafe;
  --colors-cyan-200: #a5f3fc;
  --colors-cyan-300: #67e8f9;
  --colors-cyan-400: #22d3ee;
  --colors-cyan-500: #06b6d4;
  --colors-cyan-600: #0891b2;
  --colors-cyan-700: #0e7490;
  --colors-cyan-800: #155e75;
  --colors-cyan-900: #164e63;
  --colors-cyan-950: #083344;
  --colors-teal-50: #f0fdfa;
  --colors-teal-100: #ccfbf1;
  --colors-teal-200: #99f6e4;
  --colors-teal-300: #5eead4;
  --colors-teal-400: #2dd4bf;
  --colors-teal-500: #14b8a6;
  --colors-teal-600: #0d9488;
  --colors-teal-700: #0f766e;
  --colors-teal-800: #115e59;
  --colors-teal-900: #134e4a;
  --colors-teal-950: #042f2e;
  --colors-emerald-50: #ecfdf5;
  --colors-emerald-100: #d1fae5;
  --colors-emerald-200: #a7f3d0;
  --colors-emerald-300: #6ee7b7;
  --colors-emerald-400: #34d399;
  --colors-emerald-500: #10b981;
  --colors-emerald-600: #059669;
  --colors-emerald-700: #047857;
  --colors-emerald-800: #065f46;
  --colors-emerald-900: #064e3b;
  --colors-emerald-950: #022c22;
  --colors-green-50: #f0fdf4;
  --colors-green-100: #dcfce7;
  --colors-green-200: #bbf7d0;
  --colors-green-300: #86efac;
  --colors-green-400: #4ade80;
  --colors-green-500: #22c55e;
  --colors-green-600: #16a34a;
  --colors-green-700: #15803d;
  --colors-green-800: #166534;
  --colors-green-900: #14532d;
  --colors-green-950: #052e16;
  --colors-lime-50: #f7fee7;
  --colors-lime-100: #ecfccb;
  --colors-lime-200: #d9f99d;
  --colors-lime-300: #bef264;
  --colors-lime-400: #a3e635;
  --colors-lime-500: #84cc16;
  --colors-lime-600: #65a30d;
  --colors-lime-700: #4d7c0f;
  --colors-lime-800: #3f6212;
  --colors-lime-900: #365314;
  --colors-lime-950: #1a2e05;
  --colors-yellow-50: #fefce8;
  --colors-yellow-100: #fef9c3;
  --colors-yellow-200: #fef08a;
  --colors-yellow-300: #fde047;
  --colors-yellow-400: #facc15;
  --colors-yellow-500: #eab308;
  --colors-yellow-600: #ca8a04;
  --colors-yellow-700: #a16207;
  --colors-yellow-800: #854d0e;
  --colors-yellow-900: #713f12;
  --colors-yellow-950: #422006;
  --colors-amber-50: #fffbeb;
  --colors-amber-100: #fef3c7;
  --colors-amber-200: #fde68a;
  --colors-amber-300: #fcd34d;
  --colors-amber-400: #fbbf24;
  --colors-amber-500: #f59e0b;
  --colors-amber-600: #d97706;
  --colors-amber-700: #b45309;
  --colors-amber-800: #92400e;
  --colors-amber-900: #78350f;
  --colors-amber-950: #451a03;
  --colors-orange-50: #fff7ed;
  --colors-orange-100: #ffedd5;
  --colors-orange-200: #fed7aa;
  --colors-orange-300: #fdba74;
  --colors-orange-400: #fb923c;
  --colors-orange-500: #f97316;
  --colors-orange-600: #ea580c;
  --colors-orange-700: #c2410c;
  --colors-orange-800: #9a3412;
  --colors-orange-900: #7c2d12;
  --colors-orange-950: #431407;
  --colors-red-50: #fef2f2;
  --colors-red-100: #fee2e2;
  --colors-red-200: #fecaca;
  --colors-red-300: #fca5a5;
  --colors-red-400: #f87171;
  --colors-red-500: #ef4444;
  --colors-red-600: #dc2626;
  --colors-red-700: #b91c1c;
  --colors-red-800: #991b1b;
  --colors-red-900: #7f1d1d;
  --colors-red-950: #450a0a;
  --colors-neutral-50: #fafafa;
  --colors-neutral-100: #f5f5f5;
  --colors-neutral-200: #e5e5e5;
  --colors-neutral-300: #d4d4d4;
  --colors-neutral-400: #a3a3a3;
  --colors-neutral-500: #737373;
  --colors-neutral-600: #525252;
  --colors-neutral-700: #404040;
  --colors-neutral-800: #262626;
  --colors-neutral-900: #171717;
  --colors-neutral-950: #0a0a0a;
  --colors-stone-50: #fafaf9;
  --colors-stone-100: #f5f5f4;
  --colors-stone-200: #e7e5e4;
  --colors-stone-300: #d6d3d1;
  --colors-stone-400: #a8a29e;
  --colors-stone-500: #78716c;
  --colors-stone-600: #57534e;
  --colors-stone-700: #44403c;
  --colors-stone-800: #292524;
  --colors-stone-900: #1c1917;
  --colors-stone-950: #0c0a09;
  --colors-zinc-50: #fafafa;
  --colors-zinc-100: #f4f4f5;
  --colors-zinc-200: #e4e4e7;
  --colors-zinc-300: #d4d4d8;
  --colors-zinc-400: #a1a1aa;
  --colors-zinc-500: #71717a;
  --colors-zinc-600: #52525b;
  --colors-zinc-700: #3f3f46;
  --colors-zinc-800: #27272a;
  --colors-zinc-900: #18181b;
  --colors-zinc-950: #09090b;
  --colors-gray-50: #f9fafb;
  --colors-gray-100: #f3f4f6;
  --colors-gray-200: #e5e7eb;
  --colors-gray-300: #d1d5db;
  --colors-gray-400: #9ca3af;
  --colors-gray-500: #6b7280;
  --colors-gray-600: #4b5563;
  --colors-gray-700: #374151;
  --colors-gray-800: #1f2937;
  --colors-gray-900: #111827;
  --colors-gray-950: #030712;
  --colors-slate-50: #f8fafc;
  --colors-slate-100: #f1f5f9;
  --colors-slate-200: #e2e8f0;
  --colors-slate-300: #cbd5e1;
  --colors-slate-400: #94a3b8;
  --colors-slate-500: #64748b;
  --colors-slate-600: #475569;
  --colors-slate-700: #334155;
  --colors-slate-800: #1e293b;
  --colors-slate-900: #0f172a;
  --colors-slate-950: #020617;
  --blurs-sm: 4rpx;
  --blurs-base: 8rpx;
  --blurs-md: 12rpx;
  --blurs-lg: 16rpx;
  --blurs-xl: 24rpx;
  --blurs-2xl: 40rpx;
  --blurs-3xl: 64rpx;
  --spacing-0: 0;
  --spacing-1: 8rpx;
  --spacing-2: 16rpx;
  --spacing-3: 24rpx;
  --spacing-4: 32rpx;
  --spacing-5: 40rpx;
  --spacing-6: 48rpx;
  --spacing-7: 56rpx;
  --spacing-8: 64rpx;
  --spacing-9: 72rpx;
  --spacing-10: 80rpx;
  --spacing-11: 88rpx;
  --spacing-12: 96rpx;
  --spacing-14: 112rpx;
  --spacing-16: 128rpx;
  --spacing-20: 160rpx;
  --spacing-24: 192rpx;
  --spacing-28: 224rpx;
  --spacing-32: 256rpx;
  --spacing-36: 288rpx;
  --spacing-40: 320rpx;
  --spacing-44: 352rpx;
  --spacing-48: 384rpx;
  --spacing-52: 416rpx;
  --spacing-56: 448rpx;
  --spacing-60: 480rpx;
  --spacing-64: 512rpx;
  --spacing-72: 576rpx;
  --spacing-80: 640rpx;
  --spacing-96: 768rpx;
  --spacing-0wd5: 4rpx;
  --spacing-1wd5: 12rpx;
  --spacing-2wd5: 20rpx;
  --spacing-3wd5: 28rpx;
  --sizes-0: 0;
  --sizes-1: 8rpx;
  --sizes-2: 16rpx;
  --sizes-3: 24rpx;
  --sizes-4: 32rpx;
  --sizes-5: 40rpx;
  --sizes-6: 48rpx;
  --sizes-7: 56rpx;
  --sizes-8: 64rpx;
  --sizes-9: 72rpx;
  --sizes-10: 80rpx;
  --sizes-11: 88rpx;
  --sizes-12: 96rpx;
  --sizes-14: 112rpx;
  --sizes-16: 128rpx;
  --sizes-20: 160rpx;
  --sizes-24: 192rpx;
  --sizes-28: 224rpx;
  --sizes-32: 256rpx;
  --sizes-36: 288rpx;
  --sizes-40: 320rpx;
  --sizes-44: 352rpx;
  --sizes-48: 384rpx;
  --sizes-52: 416rpx;
  --sizes-56: 448rpx;
  --sizes-60: 480rpx;
  --sizes-64: 512rpx;
  --sizes-72: 576rpx;
  --sizes-80: 640rpx;
  --sizes-96: 768rpx;
  --sizes-0wd5: 4rpx;
  --sizes-1wd5: 12rpx;
  --sizes-2wd5: 20rpx;
  --sizes-3wd5: 28rpx;
  --sizes-xs: 640rpx;
  --sizes-sm: 768rpx;
  --sizes-md: 896rpx;
  --sizes-lg: 1024rpx;
  --sizes-xl: 1152rpx;
  --sizes-2xl: 1344rpx;
  --sizes-3xl: 1536rpx;
  --sizes-4xl: 1792rpx;
  --sizes-5xl: 2048rpx;
  --sizes-6xl: 2304rpx;
  --sizes-7xl: 2560rpx;
  --sizes-8xl: 2880rpx;
  --sizes-prose: 65ch;
  --sizes-full: 100%;
  --sizes-min: min-content;
  --sizes-max: max-content;
  --sizes-fit: fit-content;
  --sizes-breakpoint-sm: 640rpx;
  --sizes-breakpoint-md: 768rpx;
  --sizes-breakpoint-lg: 1024rpx;
  --sizes-breakpoint-xl: 1280rpx;
  --sizes-breakpoint-2xl: 1536rpx;
  --animations-spin: spin 1s linear infinite;
  --animations-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animations-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
  --animations-bounce: bounce 1s infinite;
  --breakpoints-sm: 640rpx;
  --breakpoints-md: 768rpx;
  --breakpoints-lg: 1024rpx;
  --breakpoints-xl: 1280rpx;
  --breakpoints-2xl: 1536rpx;
}
@-webkit-keyframes spin {
  to {
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}
@-webkit-keyframes ping {
  100%,
  75% {
    opacity: 0;
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}
@-webkit-keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@-webkit-keyframes bounce {
  0%,
  100% {
    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    -webkit-transform: translateY(-25%);
    transform: translateY(-25%);
  }
  50% {
    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    -webkit-transform: none;
    transform: none;
  }
}
page {
  --made-with-panda: '🐼';
}
::-webkit-backdrop {
  --blur: ;
  --brightness: ;
  --contrast: ;
  --grayscale: ;
  --hue-rotate: ;
  --invert: ;
  --saturate: ;
  --sepia: ;
  --drop-shadow: ;
  --backdrop-blur: ;
  --backdrop-brightness: ;
  --backdrop-contrast: ;
  --backdrop-grayscale: ;
  --backdrop-hue-rotate: ;
  --backdrop-invert: ;
  --backdrop-opacity: ;
  --backdrop-saturate: ;
  --backdrop-sepia: ;
  --scroll-snap-strictness: proximity;
  --border-spacing-x: 0;
  --border-spacing-y: 0;
  --translate-x: 0;
  --translate-y: 0;
  --rotate: 0;
  --skew-x: 0;
  --skew-y: 0;
  --scale-x: 1;
  --scale-y: 1;
}
::backdrop,
text,
text::after,
text::before,
view,
view::after,
view::before {
  --blur: ;
  --brightness: ;
  --contrast: ;
  --grayscale: ;
  --hue-rotate: ;
  --invert: ;
  --saturate: ;
  --sepia: ;
  --drop-shadow: ;
  --backdrop-blur: ;
  --backdrop-brightness: ;
  --backdrop-contrast: ;
  --backdrop-grayscale: ;
  --backdrop-hue-rotate: ;
  --backdrop-invert: ;
  --backdrop-opacity: ;
  --backdrop-saturate: ;
  --backdrop-sepia: ;
  --scroll-snap-strictness: proximity;
  --border-spacing-x: 0;
  --border-spacing-y: 0;
  --translate-x: 0;
  --translate-y: 0;
  --rotate: 0;
  --skew-x: 0;
  --skew-y: 0;
  --scale-x: 1;
  --scale-y: 1;
}
.d_flex {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.items_center {
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}
.justify_center {
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}
.bg_redd200 {
  background: var(--colors-red-200);
}
.text_white {
  color: var(--colors-white);
}
.border_redd200 {
  border-color: var(--colors-red-200);
}
.p_1 {
  padding: var(--spacing-1);
}
.fs_20px {
  font-size: 20rpx;
}
.p_2 {
  padding: var(--spacing-2);
}
.fs_24px {
  font-size: 24rpx;
}
.border-width_1px {
  border-width: 1rpx;
}
.rounded_8px {
  border-radius: 8rpx;
}
.px_12px {
  padding-inline: 12rpx;
}
.py_24px {
  padding-block: 24rpx;
}
.bg_gainsboro {
  background-color: #dcdcdc;
  background: #dcdcdc;
}
.rounded_9999px {
  border-radius: 9999rpx;
}
.fs_13px {
  font-size: 13rpx;
}
.p_10px_15px {
  padding: 10rpx 15rpx;
}
.fs_xs {
  font-size: var(--font-sizes-xs);
}
.font_semibold {
  font-weight: var(--font-weights-semibold);
}
.text_pinkd500 {
  color: var(--colors-pink-500);
}
.text_redd400 {
  color: var(--colors-red-400);
}
.bg_amberd800 {
  background: var(--colors-amber-800);
}
.bg_blued400 {
  background: var(--colors-blue-400);
}
.h_10 {
  height: var(--sizes-10);
}
.bg_redd400 {
  background: var(--colors-red-400);
}
.mt_4 {
  margin-top: var(--spacing-4);
}
._n_text_ctext_grayd100 text {
  color: var(--colors-gray-100);
}
.bg_cyand800 {
  background: var(--colors-cyan-800);
}
.bg_redd500 {
  background: var(--colors-red-500);
}
.firstctext_redd500:first-child {
  color: var(--colors-red-500);
}
.evencbg_blue:nth-child(even) {
  background: blue;
}
.oddcbg_red:nth-child(odd) {
  background: red;
}
.beforeccontent_xu1f44bx::before {
  content: '👋';
}
.placeholderctext_greend700::-webkit-input-placeholder {
  color: var(--colors-green-700);
}
.placeholderctext_greend700::-moz-placeholder {
  color: var(--colors-green-700);
}
.placeholderctext_greend700:-ms-input-placeholder {
  color: var(--colors-green-700);
}
.placeholderctext_greend700::-ms-input-placeholder {
  color: var(--colors-green-700);
}
.placeholderctext_greend700::placeholder {
  color: var(--colors-green-700);
}
.bg_black {
  background: var(--colors-black);
}
.bg_white {
  background: var(--colors-white);
}
.pb_4 {
  padding-bottom: var(--spacing-4);
}
.loadingcbg_grayd500[aria-busy='true'],
.loadingcbg_grayd500[data-loading] {
  background: var(--colors-gray-500);
}
.bg_blued500 {
  background: var(--colors-blue-500);
}
.hovercfocuscbg_redd700:hover:focus,
.hovercfocuscbg_redd700[data-focus]:hover,
.hovercfocuscbg_redd700[data-hover]:focus,
.hovercfocuscbg_redd700[data-hover][data-focus] {
  background: var(--colors-red-700);
}
.hovercbg_yellowd400:hover,
.hovercbg_yellowd400[data-hover] {
  background: var(--colors-yellow-400);
}
.hovercbg_redd700:hover,
.hovercbg_redd700[data-hover] {
  background: var(--colors-red-700);
}
.group:hover .groupHovercbg_redd500,
.group[data-hover] .groupHovercbg_redd500 {
  background: var(--colors-red-500);
}
.peer:hover + .peerHovercbg_redd500,
.peer[data-hover] + .peerHovercbg_redd500 {
  background: var(--colors-red-500);
}
._nchover_cbg_oranged400:hover {
  background: var(--colors-orange-400);
}
.activecbg_redd900:active {
  background: var(--colors-red-900);
}
.activecbg_redd900[data-active] {
  background: var(--colors-red-900);
}
@media (forced-colors: active) {
  .highContrastcbg_black {
    background: var(--colors-black);
  }
}
@media (orientation: portrait) {
  .portraitcpb_8 {
    padding-bottom: var(--spacing-8);
  }
}
@media (prefers-color-scheme: dark) {
  .osDarkcbg_white {
    background: var(--colors-white);
  }
}
@media (prefers-reduced-motion: no-preference) {
  .motionSafectransition_all_0d3s {
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
  }
}
@media (prefers-reduced-motion: reduce) {
  .motionReducectransition_none {
    -webkit-transition: none;
    transition: none;
  }
}
"
`;

exports[`e2e > 'taroVue3' snapshot > wxml 1`] = `
"<view
  class="index"
  data-sid="_Ao"
  hover-class="none"
  hover-start-time="50"
  hover-stay-time="400"
  id="_Ao"
  style="">
  <view data-sid="_Ap" id="_Ap" style="">
    <image
      class="h5-img"
      data-sid="_Aq"
      id="_Aq"
      mode="scaleToFill"
      src=""
      style=""
      role="img"></image>
  </view>
  <view
    class="bg_yellowd200 rounded_9999px fs_90px p_10px_15px text_pinkd500"
    data-sid="_Ar"
    id="_Ar"
    style="">
    欢迎使用 NutUI4.0 开发小程序
  </view>
  <text
    class="h5-i nutui-iconfont nut-icon nut-icon-dongdong"
    data-sid="_At"
    id="_At"
    space=""
    style=""></text>
  <view class="btn" data-sid="_Au" id="_Au" style="">
    <button
      app-parameter=""
      business-id=""
      class="h5-button nut-button nut-button--primary nut-button--normal nut-button--round"
      data-sid="_Av"
      aria-disabled="false"
      form-type=""
      hover-class="button-hover"
      hover-start-time="20"
      hover-stay-time="70"
      id="_Av"
      lang=""
      open-type=""
      send-message-img=""
      send-message-path=""
      send-message-title=""
      session-from=""
      size="default"
      style=""
      type=""
      role="button">
      <view class="nut-button__wrap" data-sid="_Aw" id="_Aw" style="">
        <view data-sid="_BB" id="_BB" style="">点我</view>
      </view>
    </button>
  </view>
  <view
    class="h5-view nut-toast nut-toast-center nut-toast-base"
    data-sid="_BF"
    hover-class="none"
    hover-start-time="50"
    hover-stay-time="400"
    id="_BF"
    style="bottom: auto; display: none">
    <view
      class="nut-toast-inner"
      data-sid="_BG"
      id="_BG"
      style="text-align: center">
      <view class="nut-toast-text" data-sid="_BL" id="_BL" style="">
        你成功了～
      </view>
    </view>
  </view>
</view>
"
`;

exports[`e2e > 'taroVue3' snapshot > wxss 1`] = `
"@keyframes spin {
  to {
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}
@keyframes ping {
  100%,
  75% {
    opacity: 0;
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}
@keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@keyframes bounce {
  0%,
  100% {
    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    -webkit-transform: translateY(-25%);
    transform: translateY(-25%);
  }
  50% {
    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    -webkit-transform: none;
    transform: none;
  }
}
page {
  --made-with-panda: '🐼';
}
::-webkit-backdrop {
  --blur: ;
  --brightness: ;
  --contrast: ;
  --grayscale: ;
  --hue-rotate: ;
  --invert: ;
  --saturate: ;
  --sepia: ;
  --drop-shadow: ;
  --backdrop-blur: ;
  --backdrop-brightness: ;
  --backdrop-contrast: ;
  --backdrop-grayscale: ;
  --backdrop-hue-rotate: ;
  --backdrop-invert: ;
  --backdrop-opacity: ;
  --backdrop-saturate: ;
  --backdrop-sepia: ;
  --scroll-snap-strictness: proximity;
  --border-spacing-x: 0;
  --border-spacing-y: 0;
  --translate-x: 0;
  --translate-y: 0;
  --rotate: 0;
  --skew-x: 0;
  --skew-y: 0;
  --scale-x: 1;
  --scale-y: 1;
}
::backdrop,
text,
text::after,
text::before,
view,
view::after,
view::before {
  --blur: ;
  --brightness: ;
  --contrast: ;
  --grayscale: ;
  --hue-rotate: ;
  --invert: ;
  --saturate: ;
  --sepia: ;
  --drop-shadow: ;
  --backdrop-blur: ;
  --backdrop-brightness: ;
  --backdrop-contrast: ;
  --backdrop-grayscale: ;
  --backdrop-hue-rotate: ;
  --backdrop-invert: ;
  --backdrop-opacity: ;
  --backdrop-saturate: ;
  --backdrop-sepia: ;
  --scroll-snap-strictness: proximity;
  --border-spacing-x: 0;
  --border-spacing-y: 0;
  --translate-x: 0;
  --translate-y: 0;
  --rotate: 0;
  --skew-x: 0;
  --skew-y: 0;
  --scale-x: 1;
  --scale-y: 1;
}
text,
view {
  font: inherit;
  margin: 0;
  padding: 0;
}
text,
text::after,
text::before,
view,
view::after,
view::before {
  border-color: var(--global-color-border, currentColor);
  border-style: solid;
  border-width: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.h5-html {
  --font-fallback: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  -webkit-text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: var(--global-font-body, var(--font-fallback));
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
}
.h5-hr {
  border-top-width: 1rpx;
  color: inherit;
  height: 0;
}
.h5-body {
  height: 100%;
  line-height: inherit;
}
.h5-img {
  border-style: none;
}
.h5-audio,
.h5-canvas,
.h5-iframe,
.h5-img,
.h5-svg,
.h5-video,
embed,
object {
  display: block;
  vertical-align: middle;
}
.h5-img,
.h5-video {
  height: auto;
  max-width: 100%;
}
.h5-h1,
.h5-h2,
.h5-h3,
.h5-h4,
.h5-h5,
.h5-h6,
.h5-p {
  overflow-wrap: break-word;
}
.h5-ol,
.h5-ul {
  list-style: none;
}
.h5-code,
.h5-kbd,
.h5-pre,
.h5-samp {
  font-size: 1em;
}
.h5-button,
[type='button'],
[type='reset'],
[type='submit'] {
  -webkit-appearance: button;
  background-color: transparent;
  background-image: none;
}
.h5-button,
.h5-input,
.h5-select,
.h5-textarea,
optgroup {
  color: inherit;
}
.h5-button,
.h5-select {
  text-transform: none;
}
.h5-table {
  border-collapse: collapse;
  border-color: inherit;
  text-indent: 0;
}
.h5-input::-webkit-input-placeholder,
.h5-textarea::-webkit-input-placeholder {
  color: var(--global-color-placeholder, #9ca3af);
  opacity: 1;
}
.h5-input::-moz-placeholder,
.h5-textarea::-moz-placeholder {
  color: var(--global-color-placeholder, #9ca3af);
  opacity: 1;
}
.h5-input:-ms-input-placeholder,
.h5-textarea:-ms-input-placeholder {
  color: var(--global-color-placeholder, #9ca3af);
  opacity: 1;
}
.h5-input::-ms-input-placeholder,
.h5-textarea::-ms-input-placeholder {
  color: var(--global-color-placeholder, #9ca3af);
  opacity: 1;
}
.h5-input::placeholder,
.h5-textarea::placeholder {
  color: var(--global-color-placeholder, #9ca3af);
  opacity: 1;
}
.h5-textarea {
  resize: vertical;
}
.h5-summary {
  display: list-item;
}
.h5-small {
  font-size: 80%;
}
.h5-sub,
.h5-sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
.h5-sub {
  bottom: -0.25em;
}
.h5-sup {
  top: -0.5em;
}
.h5-dialog {
  padding: 0;
}
.h5-a {
  color: inherit;
  text-decoration: inherit;
}
[title] {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}
.h5-b,
.h5-strong {
  font-weight: bolder;
}
.h5-code,
.h5-kbd,
.h5-pre,
.h5-samp {
  --font-mono-fallback: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New';
  font-family: var(--global-font-mono, var(--font-mono-fallback));
  font-size: 1em;
}
.h5-input[type='email'],
.h5-input[type='password'],
.h5-input[type='search'],
.h5-input[type='text'] {
  -webkit-appearance: none;
  -moz-appearance: none;
}
.h5-input[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2rpx;
}
::-webkit-search-cancel-button,
::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
.h5-input[type='number']::-webkit-inner-spin-button,
.h5-input[type='number']::-webkit-outer-spin-button {
  height: auto;
}
.h5-input[type='number'] {
  -moz-appearance: textfield;
}
:-moz-ui-invalid {
  box-shadow: none;
}
:-moz-focusring {
  outline: auto;
}
page {
  --borders-none: none;
  --easings-default: cubic-bezier(0.4, 0, 0.2, 1);
  --easings-linear: linear;
  --easings-in: cubic-bezier(0.4, 0, 1, 1);
  --easings-out: cubic-bezier(0, 0, 0.2, 1);
  --easings-in-out: cubic-bezier(0.4, 0, 0.2, 1);
  --durations-fastest: 50ms;
  --durations-faster: 100ms;
  --durations-fast: 150ms;
  --durations-normal: 200ms;
  --durations-slow: 300ms;
  --durations-slower: 400ms;
  --durations-slowest: 500ms;
  --radii-xs: 0.125rem;
  --radii-sm: 0.25rem;
  --radii-md: 0.375rem;
  --radii-lg: 0.5rem;
  --radii-xl: 0.75rem;
  --radii-2xl: 1rem;
  --radii-3xl: 1.5rem;
  --radii-full: 9999rpx;
  --font-weights-thin: 100;
  --font-weights-extralight: 200;
  --font-weights-light: 300;
  --font-weights-normal: 400;
  --font-weights-medium: 500;
  --font-weights-semibold: 600;
  --font-weights-bold: 700;
  --font-weights-extrabold: 800;
  --font-weights-black: 900;
  --line-heights-none: 1;
  --line-heights-tight: 1.25;
  --line-heights-snug: 1.375;
  --line-heights-normal: 1.5;
  --line-heights-relaxed: 1.625;
  --line-heights-loose: 2;
  --fonts-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --fonts-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --fonts-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New', monospace;
  --letter-spacings-tighter: -0.05em;
  --letter-spacings-tight: -0.025em;
  --letter-spacings-normal: 0em;
  --letter-spacings-wide: 0.025em;
  --letter-spacings-wider: 0.05em;
  --letter-spacings-widest: 0.1em;
  --font-sizes-2xs: 0.5rem;
  --font-sizes-xs: 0.75rem;
  --font-sizes-sm: 0.875rem;
  --font-sizes-md: 1rem;
  --font-sizes-lg: 1.125rem;
  --font-sizes-xl: 1.25rem;
  --font-sizes-2xl: 1.5rem;
  --font-sizes-3xl: 1.875rem;
  --font-sizes-4xl: 2.25rem;
  --font-sizes-5xl: 3rem;
  --font-sizes-6xl: 3.75rem;
  --font-sizes-7xl: 4.5rem;
  --font-sizes-8xl: 6rem;
  --font-sizes-9xl: 8rem;
  --shadows-xs: 0 1rpx 2rpx 0 rgba(0, 0, 0, 0.05);
  --shadows-sm: 0 1rpx 3rpx 0 rgba(0, 0, 0, 0.1),
    0 1rpx 2rpx -1rpx rgba(0, 0, 0, 0.1);
  --shadows-md: 0 4rpx 6rpx -1rpx rgba(0, 0, 0, 0.1),
    0 2rpx 4rpx -2rpx rgba(0, 0, 0, 0.1);
  --shadows-lg: 0 10rpx 15rpx -3rpx rgba(0, 0, 0, 0.1),
    0 4rpx 6rpx -4rpx rgba(0, 0, 0, 0.1);
  --shadows-xl: 0 20rpx 25rpx -5rpx rgba(0, 0, 0, 0.1),
    0 8rpx 10rpx -6rpx rgba(0, 0, 0, 0.1);
  --shadows-2xl: 0 25rpx 50rpx -12rpx rgba(0, 0, 0, 0.25);
  --shadows-inner: inset 0 2rpx 4rpx 0 rgba(0, 0, 0, 0.05);
  --colors-current: currentColor;
  --colors-black: #000;
  --colors-white: #fff;
  --colors-transparent: transparent;
  --colors-rose-50: #fff1f2;
  --colors-rose-100: #ffe4e6;
  --colors-rose-200: #fecdd3;
  --colors-rose-300: #fda4af;
  --colors-rose-400: #fb7185;
  --colors-rose-500: #f43f5e;
  --colors-rose-600: #e11d48;
  --colors-rose-700: #be123c;
  --colors-rose-800: #9f1239;
  --colors-rose-900: #881337;
  --colors-rose-950: #4c0519;
  --colors-pink-50: #fdf2f8;
  --colors-pink-100: #fce7f3;
  --colors-pink-200: #fbcfe8;
  --colors-pink-300: #f9a8d4;
  --colors-pink-400: #f472b6;
  --colors-pink-500: #ec4899;
  --colors-pink-600: #db2777;
  --colors-pink-700: #be185d;
  --colors-pink-800: #9d174d;
  --colors-pink-900: #831843;
  --colors-pink-950: #500724;
  --colors-fuchsia-50: #fdf4ff;
  --colors-fuchsia-100: #fae8ff;
  --colors-fuchsia-200: #f5d0fe;
  --colors-fuchsia-300: #f0abfc;
  --colors-fuchsia-400: #e879f9;
  --colors-fuchsia-500: #d946ef;
  --colors-fuchsia-600: #c026d3;
  --colors-fuchsia-700: #a21caf;
  --colors-fuchsia-800: #86198f;
  --colors-fuchsia-900: #701a75;
  --colors-fuchsia-950: #4a044e;
  --colors-purple-50: #faf5ff;
  --colors-purple-100: #f3e8ff;
  --colors-purple-200: #e9d5ff;
  --colors-purple-300: #d8b4fe;
  --colors-purple-400: #c084fc;
  --colors-purple-500: #a855f7;
  --colors-purple-600: #9333ea;
  --colors-purple-700: #7e22ce;
  --colors-purple-800: #6b21a8;
  --colors-purple-900: #581c87;
  --colors-purple-950: #3b0764;
  --colors-violet-50: #f5f3ff;
  --colors-violet-100: #ede9fe;
  --colors-violet-200: #ddd6fe;
  --colors-violet-300: #c4b5fd;
  --colors-violet-400: #a78bfa;
  --colors-violet-500: #8b5cf6;
  --colors-violet-600: #7c3aed;
  --colors-violet-700: #6d28d9;
  --colors-violet-800: #5b21b6;
  --colors-violet-900: #4c1d95;
  --colors-violet-950: #2e1065;
  --colors-indigo-50: #eef2ff;
  --colors-indigo-100: #e0e7ff;
  --colors-indigo-200: #c7d2fe;
  --colors-indigo-300: #a5b4fc;
  --colors-indigo-400: #818cf8;
  --colors-indigo-500: #6366f1;
  --colors-indigo-600: #4f46e5;
  --colors-indigo-700: #4338ca;
  --colors-indigo-800: #3730a3;
  --colors-indigo-900: #312e81;
  --colors-indigo-950: #1e1b4b;
  --colors-blue-50: #eff6ff;
  --colors-blue-100: #dbeafe;
  --colors-blue-200: #bfdbfe;
  --colors-blue-300: #93c5fd;
  --colors-blue-400: #60a5fa;
  --colors-blue-500: #3b82f6;
  --colors-blue-600: #2563eb;
  --colors-blue-700: #1d4ed8;
  --colors-blue-800: #1e40af;
  --colors-blue-900: #1e3a8a;
  --colors-blue-950: #172554;
  --colors-sky-50: #f0f9ff;
  --colors-sky-100: #e0f2fe;
  --colors-sky-200: #bae6fd;
  --colors-sky-300: #7dd3fc;
  --colors-sky-400: #38bdf8;
  --colors-sky-500: #0ea5e9;
  --colors-sky-600: #0284c7;
  --colors-sky-700: #0369a1;
  --colors-sky-800: #075985;
  --colors-sky-900: #0c4a6e;
  --colors-sky-950: #082f49;
  --colors-cyan-50: #ecfeff;
  --colors-cyan-100: #cffafe;
  --colors-cyan-200: #a5f3fc;
  --colors-cyan-300: #67e8f9;
  --colors-cyan-400: #22d3ee;
  --colors-cyan-500: #06b6d4;
  --colors-cyan-600: #0891b2;
  --colors-cyan-700: #0e7490;
  --colors-cyan-800: #155e75;
  --colors-cyan-900: #164e63;
  --colors-cyan-950: #083344;
  --colors-teal-50: #f0fdfa;
  --colors-teal-100: #ccfbf1;
  --colors-teal-200: #99f6e4;
  --colors-teal-300: #5eead4;
  --colors-teal-400: #2dd4bf;
  --colors-teal-500: #14b8a6;
  --colors-teal-600: #0d9488;
  --colors-teal-700: #0f766e;
  --colors-teal-800: #115e59;
  --colors-teal-900: #134e4a;
  --colors-teal-950: #042f2e;
  --colors-emerald-50: #ecfdf5;
  --colors-emerald-100: #d1fae5;
  --colors-emerald-200: #a7f3d0;
  --colors-emerald-300: #6ee7b7;
  --colors-emerald-400: #34d399;
  --colors-emerald-500: #10b981;
  --colors-emerald-600: #059669;
  --colors-emerald-700: #047857;
  --colors-emerald-800: #065f46;
  --colors-emerald-900: #064e3b;
  --colors-emerald-950: #022c22;
  --colors-green-50: #f0fdf4;
  --colors-green-100: #dcfce7;
  --colors-green-200: #bbf7d0;
  --colors-green-300: #86efac;
  --colors-green-400: #4ade80;
  --colors-green-500: #22c55e;
  --colors-green-600: #16a34a;
  --colors-green-700: #15803d;
  --colors-green-800: #166534;
  --colors-green-900: #14532d;
  --colors-green-950: #052e16;
  --colors-lime-50: #f7fee7;
  --colors-lime-100: #ecfccb;
  --colors-lime-200: #d9f99d;
  --colors-lime-300: #bef264;
  --colors-lime-400: #a3e635;
  --colors-lime-500: #84cc16;
  --colors-lime-600: #65a30d;
  --colors-lime-700: #4d7c0f;
  --colors-lime-800: #3f6212;
  --colors-lime-900: #365314;
  --colors-lime-950: #1a2e05;
  --colors-yellow-50: #fefce8;
  --colors-yellow-100: #fef9c3;
  --colors-yellow-200: #fef08a;
  --colors-yellow-300: #fde047;
  --colors-yellow-400: #facc15;
  --colors-yellow-500: #eab308;
  --colors-yellow-600: #ca8a04;
  --colors-yellow-700: #a16207;
  --colors-yellow-800: #854d0e;
  --colors-yellow-900: #713f12;
  --colors-yellow-950: #422006;
  --colors-amber-50: #fffbeb;
  --colors-amber-100: #fef3c7;
  --colors-amber-200: #fde68a;
  --colors-amber-300: #fcd34d;
  --colors-amber-400: #fbbf24;
  --colors-amber-500: #f59e0b;
  --colors-amber-600: #d97706;
  --colors-amber-700: #b45309;
  --colors-amber-800: #92400e;
  --colors-amber-900: #78350f;
  --colors-amber-950: #451a03;
  --colors-orange-50: #fff7ed;
  --colors-orange-100: #ffedd5;
  --colors-orange-200: #fed7aa;
  --colors-orange-300: #fdba74;
  --colors-orange-400: #fb923c;
  --colors-orange-500: #f97316;
  --colors-orange-600: #ea580c;
  --colors-orange-700: #c2410c;
  --colors-orange-800: #9a3412;
  --colors-orange-900: #7c2d12;
  --colors-orange-950: #431407;
  --colors-red-50: #fef2f2;
  --colors-red-100: #fee2e2;
  --colors-red-200: #fecaca;
  --colors-red-300: #fca5a5;
  --colors-red-400: #f87171;
  --colors-red-500: #ef4444;
  --colors-red-600: #dc2626;
  --colors-red-700: #b91c1c;
  --colors-red-800: #991b1b;
  --colors-red-900: #7f1d1d;
  --colors-red-950: #450a0a;
  --colors-neutral-50: #fafafa;
  --colors-neutral-100: #f5f5f5;
  --colors-neutral-200: #e5e5e5;
  --colors-neutral-300: #d4d4d4;
  --colors-neutral-400: #a3a3a3;
  --colors-neutral-500: #737373;
  --colors-neutral-600: #525252;
  --colors-neutral-700: #404040;
  --colors-neutral-800: #262626;
  --colors-neutral-900: #171717;
  --colors-neutral-950: #0a0a0a;
  --colors-stone-50: #fafaf9;
  --colors-stone-100: #f5f5f4;
  --colors-stone-200: #e7e5e4;
  --colors-stone-300: #d6d3d1;
  --colors-stone-400: #a8a29e;
  --colors-stone-500: #78716c;
  --colors-stone-600: #57534e;
  --colors-stone-700: #44403c;
  --colors-stone-800: #292524;
  --colors-stone-900: #1c1917;
  --colors-stone-950: #0c0a09;
  --colors-zinc-50: #fafafa;
  --colors-zinc-100: #f4f4f5;
  --colors-zinc-200: #e4e4e7;
  --colors-zinc-300: #d4d4d8;
  --colors-zinc-400: #a1a1aa;
  --colors-zinc-500: #71717a;
  --colors-zinc-600: #52525b;
  --colors-zinc-700: #3f3f46;
  --colors-zinc-800: #27272a;
  --colors-zinc-900: #18181b;
  --colors-zinc-950: #09090b;
  --colors-gray-50: #f9fafb;
  --colors-gray-100: #f3f4f6;
  --colors-gray-200: #e5e7eb;
  --colors-gray-300: #d1d5db;
  --colors-gray-400: #9ca3af;
  --colors-gray-500: #6b7280;
  --colors-gray-600: #4b5563;
  --colors-gray-700: #374151;
  --colors-gray-800: #1f2937;
  --colors-gray-900: #111827;
  --colors-gray-950: #030712;
  --colors-slate-50: #f8fafc;
  --colors-slate-100: #f1f5f9;
  --colors-slate-200: #e2e8f0;
  --colors-slate-300: #cbd5e1;
  --colors-slate-400: #94a3b8;
  --colors-slate-500: #64748b;
  --colors-slate-600: #475569;
  --colors-slate-700: #334155;
  --colors-slate-800: #1e293b;
  --colors-slate-900: #0f172a;
  --colors-slate-950: #020617;
  --blurs-sm: 4rpx;
  --blurs-base: 8rpx;
  --blurs-md: 12rpx;
  --blurs-lg: 16rpx;
  --blurs-xl: 24rpx;
  --blurs-2xl: 40rpx;
  --blurs-3xl: 64rpx;
  --spacing-0: 0rem;
  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-7: 1.75rem;
  --spacing-8: 2rem;
  --spacing-9: 2.25rem;
  --spacing-10: 2.5rem;
  --spacing-11: 2.75rem;
  --spacing-12: 3rem;
  --spacing-14: 3.5rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-28: 7rem;
  --spacing-32: 8rem;
  --spacing-36: 9rem;
  --spacing-40: 10rem;
  --spacing-44: 11rem;
  --spacing-48: 12rem;
  --spacing-52: 13rem;
  --spacing-56: 14rem;
  --spacing-60: 15rem;
  --spacing-64: 16rem;
  --spacing-72: 18rem;
  --spacing-80: 20rem;
  --spacing-96: 24rem;
  --spacing-0wd5: 0.125rem;
  --spacing-1wd5: 0.375rem;
  --spacing-2wd5: 0.625rem;
  --spacing-3wd5: 0.875rem;
  --sizes-0: 0rem;
  --sizes-1: 0.25rem;
  --sizes-2: 0.5rem;
  --sizes-3: 0.75rem;
  --sizes-4: 1rem;
  --sizes-5: 1.25rem;
  --sizes-6: 1.5rem;
  --sizes-7: 1.75rem;
  --sizes-8: 2rem;
  --sizes-9: 2.25rem;
  --sizes-10: 2.5rem;
  --sizes-11: 2.75rem;
  --sizes-12: 3rem;
  --sizes-14: 3.5rem;
  --sizes-16: 4rem;
  --sizes-20: 5rem;
  --sizes-24: 6rem;
  --sizes-28: 7rem;
  --sizes-32: 8rem;
  --sizes-36: 9rem;
  --sizes-40: 10rem;
  --sizes-44: 11rem;
  --sizes-48: 12rem;
  --sizes-52: 13rem;
  --sizes-56: 14rem;
  --sizes-60: 15rem;
  --sizes-64: 16rem;
  --sizes-72: 18rem;
  --sizes-80: 20rem;
  --sizes-96: 24rem;
  --sizes-0wd5: 0.125rem;
  --sizes-1wd5: 0.375rem;
  --sizes-2wd5: 0.625rem;
  --sizes-3wd5: 0.875rem;
  --sizes-xs: 20rem;
  --sizes-sm: 24rem;
  --sizes-md: 28rem;
  --sizes-lg: 32rem;
  --sizes-xl: 36rem;
  --sizes-2xl: 42rem;
  --sizes-3xl: 48rem;
  --sizes-4xl: 56rem;
  --sizes-5xl: 64rem;
  --sizes-6xl: 72rem;
  --sizes-7xl: 80rem;
  --sizes-8xl: 90rem;
  --sizes-prose: 65ch;
  --sizes-full: 100%;
  --sizes-min: min-content;
  --sizes-max: max-content;
  --sizes-fit: fit-content;
  --sizes-breakpoint-sm: 640rpx;
  --sizes-breakpoint-md: 768rpx;
  --sizes-breakpoint-lg: 1024rpx;
  --sizes-breakpoint-xl: 1280rpx;
  --sizes-breakpoint-2xl: 1536rpx;
  --animations-spin: spin 1s linear infinite;
  --animations-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animations-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
  --animations-bounce: bounce 1s infinite;
  --breakpoints-sm: 640rpx;
  --breakpoints-md: 768rpx;
  --breakpoints-lg: 1024rpx;
  --breakpoints-xl: 1280rpx;
  --breakpoints-2xl: 1536rpx;
}
@-webkit-keyframes spin {
  to {
    -webkit-transform: rotate(1turn);
    transform: rotate(1turn);
  }
}
@-webkit-keyframes ping {
  100%,
  75% {
    opacity: 0;
    -webkit-transform: scale(2);
    transform: scale(2);
  }
}
@-webkit-keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@-webkit-keyframes bounce {
  0%,
  100% {
    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
    -webkit-transform: translateY(-25%);
    transform: translateY(-25%);
  }
  50% {
    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
    -webkit-transform: none;
    transform: none;
  }
}
.bg_yellowd200 {
  background: var(--colors-yellow-200);
}
.rounded_9999px {
  border-radius: 9999rpx;
}
.fs_90px {
  font-size: 90rpx;
}
.p_10px_15px {
  padding: 10rpx 15rpx;
}
.text_pinkd500 {
  color: var(--colors-pink-500);
}
"
`;

exports[`e2e > 'uniAppVue3' snapshot > wxml 1`] = `
"<view class="content">
  <view class="text-area pb-2">
    <text class="title bg_redd400 _nchover_cbg_oranged400">Hello</text>
  </view>
  <view class="fs_2xl pt_10px text_redd300 bg_blued800 font_semibold">aaa</view>
  <view class="bg_gainsboro rounded_9999px fs_lg p_10px_15px">
    <view>Hello World</view>
  </view>
  <view class="flex justify-around w-full">
    <ice-button-tw is="components/ButtonTw">
      <view
        class="font-semibold ButtonTw--font-semibold border ButtonTw--border rounded ButtonTw--rounded bg-blue-500 ButtonTw--bg-blue-500 text-white ButtonTw--text-white border-transparent ButtonTw--border-transparent hovercbg-blue-600 ButtonTw--hovercbg-blue-600 text-base ButtonTw--text-base py-2 ButtonTw--py-2 px-4 ButtonTw--px-4 uppercase ButtonTw--uppercase">
        asdfg
      </view>
    </ice-button-tw>
    <ice-button-panda is="components/ButtonPanda">
      <view
        class="font_semibold ButtonPanda--font_semibold border-width_1px ButtonPanda--border-width_1px rounded_md ButtonPanda--rounded_md bg_blued500 ButtonPanda--bg_blued500 text_white ButtonPanda--text_white border_transparent ButtonPanda--border_transparent hovercbg_blued600 ButtonPanda--hovercbg_blued600 fs_md ButtonPanda--fs_md py_2 ButtonPanda--py_2 px_4 ButtonPanda--px_4 text_uppercase ButtonPanda--text_uppercase">
        zxcvb
      </view>
    </ice-button-panda>
  </view>
</view>
"
`;

exports[`e2e > 'uniAppVue3' snapshot > wxss 1`] = `
"@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}
@keyframes ping {
  75%,
  to {
    transform: scale(2);
    opacity: 0;
  }
}
@keyframes pulse {
  50% {
    opacity: 0.5;
  }
}
@keyframes bounce {
  0%,
  to {
    transform: translateY(-25%);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
  50% {
    transform: none;
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
  }
}
::before,
::after {
  --tw-content: '';
}
view,
text,
:before,
:after {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position: ;
  --tw-gradient-via-position: ;
  --tw-gradient-to-position: ;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
}
.visible {
  visibility: visible;
}
.collapse {
  visibility: collapse;
}
.static {
  position: static;
}
.fixed {
  position: fixed;
}
.absolute {
  position: absolute;
}
.relative {
  position: relative;
}
.sticky {
  position: sticky;
}
.isolate {
  isolation: isolate;
}
.block {
  display: block;
}
.inline-block {
  display: inline-block;
}
.inline {
  display: inline;
}
.flex {
  display: flex;
}
.inline-flex {
  display: inline-flex;
}
.table {
  display: table;
}
.inline-table {
  display: inline-table;
}
.table-caption {
  display: table-caption;
}
.table-cell {
  display: table-cell;
}
.table-column {
  display: table-column;
}
.table-column-group {
  display: table-column-group;
}
.table-footer-group {
  display: table-footer-group;
}
.table-header-group {
  display: table-header-group;
}
.table-row-group {
  display: table-row-group;
}
.table-row {
  display: table-row;
}
.flow-root {
  display: flow-root;
}
.grid {
  display: grid;
}
.inline-grid {
  display: inline-grid;
}
.contents {
  display: contents;
}
.list-item {
  display: list-item;
}
.hidden {
  display: none;
}
.w-full {
  width: 100%;
}
.flex-shrink,
.shrink {
  flex-shrink: 1;
}
.flex-grow,
.grow {
  flex-grow: 1;
}
.border-collapse {
  border-collapse: collapse;
}
.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
    rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y))
    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.select-all {
  -webkit-user-select: all;
  -moz-user-select: all;
  user-select: all;
}
.resize {
  resize: both;
}
.flex-wrap {
  flex-wrap: wrap;
}
.justify-around {
  justify-content: space-around;
}
.self-start {
  align-self: flex-start;
}
.self-end {
  align-self: flex-end;
}
.truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.break-all {
  word-break: break-all;
}
.rounded {
  border-radius: 8rpx;
}
.border {
  border-width: 1px;
}
.border-gray-400 {
  --tw-border-opacity: 1;
  border-color: rgb(156 163 175 / var(--tw-border-opacity));
}
.border-transparent {
  border-color: transparent;
}
.bg-blue-500 {
  --tw-bg-opacity: 1;
  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
}
.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}
.px-2 {
  padding-left: 16rpx;
  padding-right: 16rpx;
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
}
.py-1 {
  padding-top: 8rpx;
  padding-bottom: 8rpx;
}
.py-2 {
  padding-top: 16rpx;
}
.py-2,
.pb-2 {
  padding-bottom: 16rpx;
}
.text-justify {
  text-align: justify;
}
.text-base {
  font-size: 32rpx;
  line-height: 48rpx;
}
.text-sm {
  font-size: 28rpx;
  line-height: 40rpx;
}
.font-semibold {
  font-weight: 600;
}
.uppercase {
  text-transform: uppercase;
}
.lowercase {
  text-transform: lowercase;
}
.capitalize {
  text-transform: capitalize;
}
.italic {
  font-style: italic;
}
.ordinal {
  --tw-ordinal: ordinal;
}
.ordinal,
.slashed-zero {
  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero)
    var(--tw-numeric-figure) var(--tw-numeric-spacing)
    var(--tw-numeric-fraction);
}
.slashed-zero {
  --tw-slashed-zero: slashed-zero;
}
.lining-nums {
  --tw-numeric-figure: lining-nums;
}
.lining-nums,
.oldstyle-nums {
  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero)
    var(--tw-numeric-figure) var(--tw-numeric-spacing)
    var(--tw-numeric-fraction);
}
.oldstyle-nums {
  --tw-numeric-figure: oldstyle-nums;
}
.proportional-nums {
  --tw-numeric-spacing: proportional-nums;
}
.proportional-nums,
.tabular-nums {
  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero)
    var(--tw-numeric-figure) var(--tw-numeric-spacing)
    var(--tw-numeric-fraction);
}
.tabular-nums {
  --tw-numeric-spacing: tabular-nums;
}
.diagonal-fractions {
  --tw-numeric-fraction: diagonal-fractions;
}
.diagonal-fractions,
.stacked-fractions {
  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero)
    var(--tw-numeric-figure) var(--tw-numeric-spacing)
    var(--tw-numeric-fraction);
}
.stacked-fractions {
  --tw-numeric-fraction: stacked-fractions;
}
.text-gray-800 {
  --tw-text-opacity: 1;
  color: rgb(31 41 55 / var(--tw-text-opacity));
}
.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}
.underline {
  text-decoration-line: underline;
}
.overline {
  text-decoration-line: overline;
}
.line-through {
  text-decoration-line: line-through;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.subpixel-antialiased {
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}
.shadow {
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),
    0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
.outline {
  outline-style: solid;
}
.ring {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
    calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
    var(--tw-shadow, 0 0 #0000);
}
.blur {
  --tw-blur: blur(8px);
}
.blur,
.grayscale {
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
    var(--tw-sepia) var(--tw-drop-shadow);
}
.grayscale {
  --tw-grayscale: grayscale(100%);
}
.invert {
  --tw-invert: invert(100%);
}
.invert,
.sepia {
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
    var(--tw-sepia) var(--tw-drop-shadow);
}
.sepia {
  --tw-sepia: sepia(100%);
}
.filter {
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
    var(--tw-sepia) var(--tw-drop-shadow);
}
.backdrop-filter {
  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
    var(--tw-backdrop-sepia);
  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
    var(--tw-backdrop-sepia);
}
.transition {
  transition-property:
    color,
    background-color,
    border-color,
    text-decoration-color,
    fill,
    stroke,
    opacity,
    box-shadow,
    transform,
    filter,
    -webkit-backdrop-filter;
  transition-property: color, background-color, border-color,
    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
    backdrop-filter;
  transition-property:
    color,
    background-color,
    border-color,
    text-decoration-color,
    fill,
    stroke,
    opacity,
    box-shadow,
    transform,
    filter,
    backdrop-filter,
    -webkit-backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
}
.ease-in {
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
}
.ease-in-out {
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.ease-out {
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
}
.container {
  width: 100%;
}
page {
  --made-with-panda: '\\1f43c';
}
view,
text,
view:before,
text:before,
view:after,
text:after,
::backdrop {
  --blur: ;
  --brightness: ;
  --contrast: ;
  --grayscale: ;
  --hue-rotate: ;
  --invert: ;
  --saturate: ;
  --sepia: ;
  --drop-shadow: ;
  --backdrop-blur: ;
  --backdrop-brightness: ;
  --backdrop-contrast: ;
  --backdrop-grayscale: ;
  --backdrop-hue-rotate: ;
  --backdrop-invert: ;
  --backdrop-opacity: ;
  --backdrop-saturate: ;
  --backdrop-sepia: ;
  --scroll-snap-strictness: proximity;
  --border-spacing-x: 0;
  --border-spacing-y: 0;
  --translate-x: 0;
  --translate-y: 0;
  --rotate: 0;
  --skew-x: 0;
  --skew-y: 0;
  --scale-x: 1;
  --scale-y: 1;
}
page {
  --borders-none: none;
  --easings-default: cubic-bezier(0.4, 0, 0.2, 1);
  --easings-linear: linear;
  --easings-in: cubic-bezier(0.4, 0, 1, 1);
  --easings-out: cubic-bezier(0, 0, 0.2, 1);
  --easings-in-out: cubic-bezier(0.4, 0, 0.2, 1);
  --durations-fastest: 50ms;
  --durations-faster: 0.1s;
  --durations-fast: 0.15s;
  --durations-normal: 0.2s;
  --durations-slow: 0.3s;
  --durations-slower: 0.4s;
  --durations-slowest: 0.5s;
  --radii-xs: 4rpx;
  --radii-sm: 8rpx;
  --radii-md: 12rpx;
  --radii-lg: 16rpx;
  --radii-xl: 24rpx;
  --radii-2xl: 32rpx;
  --radii-3xl: 48rpx;
  --radii-full: 9999px;
  --font-weights-thin: 100;
  --font-weights-extralight: 200;
  --font-weights-light: 300;
  --font-weights-normal: 400;
  --font-weights-medium: 500;
  --font-weights-semibold: 600;
  --font-weights-bold: 700;
  --font-weights-extrabold: 800;
  --font-weights-black: 900;
  --line-heights-none: 1;
  --line-heights-tight: 1.25;
  --line-heights-snug: 1.375;
  --line-heights-normal: 1.5;
  --line-heights-relaxed: 1.625;
  --line-heights-loose: 2;
  --fonts-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --fonts-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --fonts-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New', monospace;
  --letter-spacings-tighter: -0.05em;
  --letter-spacings-tight: -0.025em;
  --letter-spacings-normal: 0em;
  --letter-spacings-wide: 0.025em;
  --letter-spacings-wider: 0.05em;
  --letter-spacings-widest: 0.1em;
  --font-sizes-2xs: 16rpx;
  --font-sizes-xs: 24rpx;
  --font-sizes-sm: 28rpx;
  --font-sizes-md: 32rpx;
  --font-sizes-lg: 36rpx;
  --font-sizes-xl: 40rpx;
  --font-sizes-2xl: 48rpx;
  --font-sizes-3xl: 60rpx;
  --font-sizes-4xl: 72rpx;
  --font-sizes-5xl: 96rpx;
  --font-sizes-6xl: 120rpx;
  --font-sizes-7xl: 144rpx;
  --font-sizes-8xl: 192rpx;
  --font-sizes-9xl: 256rpx;
  --shadows-xs: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --shadows-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
  --shadows-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --shadows-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1),
    0 4px 6px -4px rgb(0 0 0 / 0.1);
  --shadows-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1),
    0 8px 10px -6px rgb(0 0 0 / 0.1);
  --shadows-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
  --shadows-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
  --colors-current: currentColor;
  --colors-black: #000;
  --colors-white: #fff;
  --colors-transparent: rgb(0 0 0 / 0);
  --colors-rose-50: #fff1f2;
  --colors-rose-100: #ffe4e6;
  --colors-rose-200: #fecdd3;
  --colors-rose-300: #fda4af;
  --colors-rose-400: #fb7185;
  --colors-rose-500: #f43f5e;
  --colors-rose-600: #e11d48;
  --colors-rose-700: #be123c;
  --colors-rose-800: #9f1239;
  --colors-rose-900: #881337;
  --colors-rose-950: #4c0519;
  --colors-pink-50: #fdf2f8;
  --colors-pink-100: #fce7f3;
  --colors-pink-200: #fbcfe8;
  --colors-pink-300: #f9a8d4;
  --colors-pink-400: #f472b6;
  --colors-pink-500: #ec4899;
  --colors-pink-600: #db2777;
  --colors-pink-700: #be185d;
  --colors-pink-800: #9d174d;
  --colors-pink-900: #831843;
  --colors-pink-950: #500724;
  --colors-fuchsia-50: #fdf4ff;
  --colors-fuchsia-100: #fae8ff;
  --colors-fuchsia-200: #f5d0fe;
  --colors-fuchsia-300: #f0abfc;
  --colors-fuchsia-400: #e879f9;
  --colors-fuchsia-500: #d946ef;
  --colors-fuchsia-600: #c026d3;
  --colors-fuchsia-700: #a21caf;
  --colors-fuchsia-800: #86198f;
  --colors-fuchsia-900: #701a75;
  --colors-fuchsia-950: #4a044e;
  --colors-purple-50: #faf5ff;
  --colors-purple-100: #f3e8ff;
  --colors-purple-200: #e9d5ff;
  --colors-purple-300: #d8b4fe;
  --colors-purple-400: #c084fc;
  --colors-purple-500: #a855f7;
  --colors-purple-600: #9333ea;
  --colors-purple-700: #7e22ce;
  --colors-purple-800: #6b21a8;
  --colors-purple-900: #581c87;
  --colors-purple-950: #3b0764;
  --colors-violet-50: #f5f3ff;
  --colors-violet-100: #ede9fe;
  --colors-violet-200: #ddd6fe;
  --colors-violet-300: #c4b5fd;
  --colors-violet-400: #a78bfa;
  --colors-violet-500: #8b5cf6;
  --colors-violet-600: #7c3aed;
  --colors-violet-700: #6d28d9;
  --colors-violet-800: #5b21b6;
  --colors-violet-900: #4c1d95;
  --colors-violet-950: #2e1065;
  --colors-indigo-50: #eef2ff;
  --colors-indigo-100: #e0e7ff;
  --colors-indigo-200: #c7d2fe;
  --colors-indigo-300: #a5b4fc;
  --colors-indigo-400: #818cf8;
  --colors-indigo-500: #6366f1;
  --colors-indigo-600: #4f46e5;
  --colors-indigo-700: #4338ca;
  --colors-indigo-800: #3730a3;
  --colors-indigo-900: #312e81;
  --colors-indigo-950: #1e1b4b;
  --colors-blue-50: #eff6ff;
  --colors-blue-100: #dbeafe;
  --colors-blue-200: #bfdbfe;
  --colors-blue-300: #93c5fd;
  --colors-blue-400: #60a5fa;
  --colors-blue-500: #3b82f6;
  --colors-blue-600: #2563eb;
  --colors-blue-700: #1d4ed8;
  --colors-blue-800: #1e40af;
  --colors-blue-900: #1e3a8a;
  --colors-blue-950: #172554;
  --colors-sky-50: #f0f9ff;
  --colors-sky-100: #e0f2fe;
  --colors-sky-200: #bae6fd;
  --colors-sky-300: #7dd3fc;
  --colors-sky-400: #38bdf8;
  --colors-sky-500: #0ea5e9;
  --colors-sky-600: #0284c7;
  --colors-sky-700: #0369a1;
  --colors-sky-800: #075985;
  --colors-sky-900: #0c4a6e;
  --colors-sky-950: #082f49;
  --colors-cyan-50: #ecfeff;
  --colors-cyan-100: #cffafe;
  --colors-cyan-200: #a5f3fc;
  --colors-cyan-300: #67e8f9;
  --colors-cyan-400: #22d3ee;
  --colors-cyan-500: #06b6d4;
  --colors-cyan-600: #0891b2;
  --colors-cyan-700: #0e7490;
  --colors-cyan-800: #155e75;
  --colors-cyan-900: #164e63;
  --colors-cyan-950: #083344;
  --colors-teal-50: #f0fdfa;
  --colors-teal-100: #ccfbf1;
  --colors-teal-200: #99f6e4;
  --colors-teal-300: #5eead4;
  --colors-teal-400: #2dd4bf;
  --colors-teal-500: #14b8a6;
  --colors-teal-600: #0d9488;
  --colors-teal-700: #0f766e;
  --colors-teal-800: #115e59;
  --colors-teal-900: #134e4a;
  --colors-teal-950: #042f2e;
  --colors-emerald-50: #ecfdf5;
  --colors-emerald-100: #d1fae5;
  --colors-emerald-200: #a7f3d0;
  --colors-emerald-300: #6ee7b7;
  --colors-emerald-400: #34d399;
  --colors-emerald-500: #10b981;
  --colors-emerald-600: #059669;
  --colors-emerald-700: #047857;
  --colors-emerald-800: #065f46;
  --colors-emerald-900: #064e3b;
  --colors-emerald-950: #022c22;
  --colors-green-50: #f0fdf4;
  --colors-green-100: #dcfce7;
  --colors-green-200: #bbf7d0;
  --colors-green-300: #86efac;
  --colors-green-400: #4ade80;
  --colors-green-500: #22c55e;
  --colors-green-600: #16a34a;
  --colors-green-700: #15803d;
  --colors-green-800: #166534;
  --colors-green-900: #14532d;
  --colors-green-950: #052e16;
  --colors-lime-50: #f7fee7;
  --colors-lime-100: #ecfccb;
  --colors-lime-200: #d9f99d;
  --colors-lime-300: #bef264;
  --colors-lime-400: #a3e635;
  --colors-lime-500: #84cc16;
  --colors-lime-600: #65a30d;
  --colors-lime-700: #4d7c0f;
  --colors-lime-800: #3f6212;
  --colors-lime-900: #365314;
  --colors-lime-950: #1a2e05;
  --colors-yellow-50: #fefce8;
  --colors-yellow-100: #fef9c3;
  --colors-yellow-200: #fef08a;
  --colors-yellow-300: #fde047;
  --colors-yellow-400: #facc15;
  --colors-yellow-500: #eab308;
  --colors-yellow-600: #ca8a04;
  --colors-yellow-700: #a16207;
  --colors-yellow-800: #854d0e;
  --colors-yellow-900: #713f12;
  --colors-yellow-950: #422006;
  --colors-amber-50: #fffbeb;
  --colors-amber-100: #fef3c7;
  --colors-amber-200: #fde68a;
  --colors-amber-300: #fcd34d;
  --colors-amber-400: #fbbf24;
  --colors-amber-500: #f59e0b;
  --colors-amber-600: #d97706;
  --colors-amber-700: #b45309;
  --colors-amber-800: #92400e;
  --colors-amber-900: #78350f;
  --colors-amber-950: #451a03;
  --colors-orange-50: #fff7ed;
  --colors-orange-100: #ffedd5;
  --colors-orange-200: #fed7aa;
  --colors-orange-300: #fdba74;
  --colors-orange-400: #fb923c;
  --colors-orange-500: #f97316;
  --colors-orange-600: #ea580c;
  --colors-orange-700: #c2410c;
  --colors-orange-800: #9a3412;
  --colors-orange-900: #7c2d12;
  --colors-orange-950: #431407;
  --colors-red-50: #fef2f2;
  --colors-red-100: #fee2e2;
  --colors-red-200: #fecaca;
  --colors-red-300: #fca5a5;
  --colors-red-400: #f87171;
  --colors-red-500: #ef4444;
  --colors-red-600: #dc2626;
  --colors-red-700: #b91c1c;
  --colors-red-800: #991b1b;
  --colors-red-900: #7f1d1d;
  --colors-red-950: #450a0a;
  --colors-neutral-50: #fafafa;
  --colors-neutral-100: #f5f5f5;
  --colors-neutral-200: #e5e5e5;
  --colors-neutral-300: #d4d4d4;
  --colors-neutral-400: #a3a3a3;
  --colors-neutral-500: #737373;
  --colors-neutral-600: #525252;
  --colors-neutral-700: #404040;
  --colors-neutral-800: #262626;
  --colors-neutral-900: #171717;
  --colors-neutral-950: #0a0a0a;
  --colors-stone-50: #fafaf9;
  --colors-stone-100: #f5f5f4;
  --colors-stone-200: #e7e5e4;
  --colors-stone-300: #d6d3d1;
  --colors-stone-400: #a8a29e;
  --colors-stone-500: #78716c;
  --colors-stone-600: #57534e;
  --colors-stone-700: #44403c;
  --colors-stone-800: #292524;
  --colors-stone-900: #1c1917;
  --colors-stone-950: #0c0a09;
  --colors-zinc-50: #fafafa;
  --colors-zinc-100: #f4f4f5;
  --colors-zinc-200: #e4e4e7;
  --colors-zinc-300: #d4d4d8;
  --colors-zinc-400: #a1a1aa;
  --colors-zinc-500: #71717a;
  --colors-zinc-600: #52525b;
  --colors-zinc-700: #3f3f46;
  --colors-zinc-800: #27272a;
  --colors-zinc-900: #18181b;
  --colors-zinc-950: #09090b;
  --colors-gray-50: #f9fafb;
  --colors-gray-100: #f3f4f6;
  --colors-gray-200: #e5e7eb;
  --colors-gray-300: #d1d5db;
  --colors-gray-400: #9ca3af;
  --colors-gray-500: #6b7280;
  --colors-gray-600: #4b5563;
  --colors-gray-700: #374151;
  --colors-gray-800: #1f2937;
  --colors-gray-900: #111827;
  --colors-gray-950: #030712;
  --colors-slate-50: #f8fafc;
  --colors-slate-100: #f1f5f9;
  --colors-slate-200: #e2e8f0;
  --colors-slate-300: #cbd5e1;
  --colors-slate-400: #94a3b8;
  --colors-slate-500: #64748b;
  --colors-slate-600: #475569;
  --colors-slate-700: #334155;
  --colors-slate-800: #1e293b;
  --colors-slate-900: #0f172a;
  --colors-slate-950: #020617;
  --blurs-sm: 4px;
  --blurs-base: 8px;
  --blurs-md: 12px;
  --blurs-lg: 16px;
  --blurs-xl: 24px;
  --blurs-2xl: 40px;
  --blurs-3xl: 64px;
  --spacing-0: 0;
  --spacing-1: 8rpx;
  --spacing-2: 16rpx;
  --spacing-3: 24rpx;
  --spacing-4: 32rpx;
  --spacing-5: 40rpx;
  --spacing-6: 48rpx;
  --spacing-7: 56rpx;
  --spacing-8: 64rpx;
  --spacing-9: 72rpx;
  --spacing-10: 80rpx;
  --spacing-11: 88rpx;
  --spacing-12: 96rpx;
  --spacing-14: 112rpx;
  --spacing-16: 128rpx;
  --spacing-20: 160rpx;
  --spacing-24: 192rpx;
  --spacing-28: 224rpx;
  --spacing-32: 256rpx;
  --spacing-36: 288rpx;
  --spacing-40: 320rpx;
  --spacing-44: 352rpx;
  --spacing-48: 384rpx;
  --spacing-52: 416rpx;
  --spacing-56: 448rpx;
  --spacing-60: 480rpx;
  --spacing-64: 512rpx;
  --spacing-72: 576rpx;
  --spacing-80: 640rpx;
  --spacing-96: 768rpx;
  --spacing-0wd5: 4rpx;
  --spacing-1wd5: 12rpx;
  --spacing-2wd5: 20rpx;
  --spacing-3wd5: 28rpx;
  --sizes-0: 0;
  --sizes-1: 8rpx;
  --sizes-2: 16rpx;
  --sizes-3: 24rpx;
  --sizes-4: 32rpx;
  --sizes-5: 40rpx;
  --sizes-6: 48rpx;
  --sizes-7: 56rpx;
  --sizes-8: 64rpx;
  --sizes-9: 72rpx;
  --sizes-10: 80rpx;
  --sizes-11: 88rpx;
  --sizes-12: 96rpx;
  --sizes-14: 112rpx;
  --sizes-16: 128rpx;
  --sizes-20: 160rpx;
  --sizes-24: 192rpx;
  --sizes-28: 224rpx;
  --sizes-32: 256rpx;
  --sizes-36: 288rpx;
  --sizes-40: 320rpx;
  --sizes-44: 352rpx;
  --sizes-48: 384rpx;
  --sizes-52: 416rpx;
  --sizes-56: 448rpx;
  --sizes-60: 480rpx;
  --sizes-64: 512rpx;
  --sizes-72: 576rpx;
  --sizes-80: 640rpx;
  --sizes-96: 768rpx;
  --sizes-0wd5: 4rpx;
  --sizes-1wd5: 12rpx;
  --sizes-2wd5: 20rpx;
  --sizes-3wd5: 28rpx;
  --sizes-xs: 640rpx;
  --sizes-sm: 768rpx;
  --sizes-md: 896rpx;
  --sizes-lg: 1024rpx;
  --sizes-xl: 1152rpx;
  --sizes-2xl: 1344rpx;
  --sizes-3xl: 1536rpx;
  --sizes-4xl: 1792rpx;
  --sizes-5xl: 2048rpx;
  --sizes-6xl: 2304rpx;
  --sizes-7xl: 2560rpx;
  --sizes-8xl: 2880rpx;
  --sizes-prose: 65ch;
  --sizes-full: 100%;
  --sizes-min: min-content;
  --sizes-max: max-content;
  --sizes-fit: fit-content;
  --sizes-breakpoint-sm: 640px;
  --sizes-breakpoint-md: 768px;
  --sizes-breakpoint-lg: 1024px;
  --sizes-breakpoint-xl: 1280px;
  --sizes-breakpoint-2xl: 1536px;
  --animations-spin: spin 1s linear infinite;
  --animations-ping: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animations-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
  --animations-bounce: bounce 1s infinite;
  --breakpoints-sm: 640px;
  --breakpoints-md: 768px;
  --breakpoints-lg: 1024px;
  --breakpoints-xl: 1280px;
  --breakpoints-2xl: 1536px;
}
.border-width_1px {
  border-width: 1px;
}
.rounded_md {
  border-radius: var(--radii-md);
}
.bg_blued500 {
  background: var(--colors-blue-500);
}
.text_white {
  color: var(--colors-white);
}
.border_transparent {
  border-color: var(--colors-transparent);
}
.bg_white {
  background: var(--colors-white);
}
.text_grayd800 {
  color: var(--colors-gray-800);
}
.border_grayd400 {
  border-color: var(--colors-gray-400);
}
.fs_sm {
  font-size: var(--font-sizes-sm);
}
.py_1 {
  padding-block: var(--spacing-1);
}
.px_2 {
  padding-inline: var(--spacing-2);
}
.fs_md {
  font-size: var(--font-sizes-md);
}
.py_2 {
  padding-block: var(--spacing-2);
}
.px_4 {
  padding-inline: var(--spacing-4);
}
.text_uppercase {
  text-transform: uppercase;
}
.text_redd300 {
  color: var(--colors-red-300);
}
.bg_blued800 {
  background: var(--colors-blue-800);
}
.font_semibold {
  font-weight: var(--font-weights-semibold);
}
.bg_gainsboro {
  background-color: #dcdcdc;
}
.rounded_9999px {
  border-radius: 9999px;
}
.fs_lg {
  font-size: var(--font-sizes-lg);
}
.p_10px_15px {
  padding: 10px 15px;
}
.fs_2xl {
  font-size: var(--font-sizes-2xl);
}
.pt_10px {
  padding-top: 10px;
}
.bg_redd400 {
  background: var(--colors-red-400);
}
.hovercbg_blued600[data-hover] {
  background: var(--colors-blue-600);
}
.hovercbg_grayd100[data-hover] {
  background: var(--colors-gray-100);
}
@media (min-width: 640px) {
  .container {
    max-width: 640px;
  }
}
@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}
@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}
@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}
@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
  }
}
page::after {
  position: fixed;
  content: '';
  left: -1000px;
  top: -1000px;
  -webkit-animation: shadow-preload 0.1s;
  -webkit-animation-delay: 3s;
  animation: shadow-preload 0.1s;
  animation-delay: 3s;
}
@-webkit-keyframes shadow-preload {
  0% {
    background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
  }
  100% {
    background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
  }
}
@keyframes shadow-preload {
  0% {
    background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
  }
  100% {
    background-image: url(https://cdn1.dcloud.net.cn/img/shadow-grey.png);
  }
}
page {
  --status-bar-height: 25px;
  --top-window-height: 0px;
  --window-top: 0px;
  --window-bottom: 0px;
  --window-left: 0px;
  --window-right: 0px;
  --window-magin: 0px;
}
[data-c-h='true'] {
  display: none !important;
}
"
`;
